noticed info was being cut off on mobile, trying a fix

--- a/styles/sass/partials/_info.scss
+++ b/styles/sass/partials/_info.scss
@@ -12,6 +12,8 @@
     text-align: right;
     margin-right: 0;
     padding-bottom: 20px;
+    overflow: auto;
+    scrollbar-width: none;
     a {
         margin-top: 10px;
     }
@@ -27,3 +29,6 @@
     }
 }
 
+.infoContainer::-webkit-scrollbar {
+    display: none;
+}
